# solution-py-bob

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  math_functions.py
