[tool.poetry]
name = "solution-py-bob"
version = "0.1.0"
description = "Bob's implementation of various mathematical functions in Python"
authors = ["Bob <bob@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
